Correcting nav z-index issue.

--- a/assets/sass/partials.sass
+++ b/assets/sass/partials.sass
@@ -32,7 +32,7 @@ header
 
 nav
 	+break(max, $break-2)
-		z-index: $z-over
+		z-index: $z-top
 		grid-row: 2 / 4
 		grid-column: 2 / 4
 		background-color: rgba($white, 0.96)
